<resources>

    <string name="app_name">青蛙卫士</string>
    <string name="exit_tips">再按一次退出程序</string>
    <string name="operate_prompt">操作提示</string>
    <string name="upgrade_now">立即更新</string>
    <string name="upgrade_later">以后再说</string>
    <string name="find_new_version">发现新版本</string>
    <string name="current_version_tips">当前版本：</string>
    <string name="new_version_tips">最新版本：</string>
    <string name="whether_upgrade_tips">是否升级到新版本？</string>
    <string name="download_apk_error">下载最新apk文件失败</string>
    <string name="setting_center">设置中心</string>
    <string name="autoupdate">自动更新</string>
    <string name="autoupdate_closed">自动更新已关闭</string>
    <string name="autoupdate_opened">自动更新已开启</string>
    <string name="change_applockpwd">修改程序锁密码</string>
    <string name="auth_applockpwd">程序锁密码认证</string>
    <string name="set_applockpwd">设置程序锁密码</string>
    <string name="applock">程序锁</string>
    <string name="applock_closed">程序锁已关闭</string>
    <string name="applock_opened">程序锁已开启</string>
    <string name="please_input_applockpwd">请输入程序锁密码</string>
    <string name="please_input_oldapplockpwd">请输入旧程序锁密码</string>
    <string name="please_input_newapplockpwd">请输入新程序锁密码</string>
    <string name="update">修改</string>
    <string name="cancel">取消</string>
    <string name="ok">确定</string>
    <string name="pwd_error_tips">密码输入错误</string>
    <string name="pwd_not_allow_null_tips">密码不能为空</string>
    <string name="unlock">未加锁</string>
    <string name="locked">已加锁</string>
    <string name="unlock_count">未加锁应用个数：</string>
    <string name="locked_count">已加锁应用个数：</string>
    <string name="applock_description">保护您的隐私</string>
    <string name="software_manage">软件管理</string>
    <string name="available_sd_tips">可用SD卡：</string>
    <string name="available_rom_tips">可用内存：</string>
    <string name="user_software_tips">用户程序个数：</string>
    <string name="system_software_tips">系统程序个数：</string>
    <string name="mobile_storage">手机内存</string>
    <string name="external_storage">外部存储</string>
    <string name="run">运行</string>
    <string name="uninstall">卸载</string>
    <string name="share">分享</string>
    <string name="can_not_find_app">没有找到当前应用</string>
    <string name="can_not_run_app">无法启动该应用</string>
    <string name="recommend_tips">推荐您使用一款软件:</string>
    <string name="downloadurl_tips">，下载地址：https://play.google.com/store/apps/details?id=</string>
    <string name="process_manage">进程管理</string>
    <string name="occupy_storage_tips">占用内存：</string>
    <string name="user_process_tips">用户进程个数：</string>
    <string name="system_process_tips">系统进程个数：</string>
    <string name="select_all">全选</string>
    <string name="select_inverse">反选</string>
    <string name="onekey_clean">一键清理</string>
    <string name="running_process_tips">运行中的进程个数：</string>
    <string name="available_total_tips">\n可用/总内存:</string>
    <string name="kill_process_tips">杀死进程个数：</string>
    <string name="release_storage_tips">\n释放内存：</string>
    <string name="blacklist_manage">黑名单管理</string>
    <string name="add">添加</string>
    <string name="number_tips">号码：</string>
    <string name="all_intercept">全部拦截</string>
    <string name="phone_intercept">电话拦截</string>
    <string name="sms_intercept">短信拦截</string>
    <string name="add_blacklist_number">添加黑名单号码</string>
    <string name="please_input_blacklist_number">请输入黑名单号码</string>
    <string name="all">全部</string>
    <string name="phone">电话</string>
    <string name="sms">短信</string>
    <string name="blacklist_number_not_allow_null">黑名单号码不能为空</string>
    <string name="not_have_more_data">没有更多的数据了</string>
    <string name="kill_virus">病毒查杀</string>
    <string name="init_ing_virus">正在初始化扫毒引擎</string>
    <string name="scan_end">扫描完毕</string>
    <string name="discover_virus">发现病毒:</string>
    <string name="scan_safety">扫描安全:</string>
    <string name="kill_virus_tip">查杀病毒提示</string>
    <string name="virus_number_tips">发现病毒个数：</string>
    <string name="is_kill_virus">\n是否立即查杀？</string>
    <string name="kill">查杀</string>
    <string name="system_optimize">系统优化</string>
    <string name="data_size">数据大小</string>
    <string name="cache_size">缓存大小</string>
    <string name="code_size">程序大小</string>
    <string name="advance_tool">高级工具</string>
    <string name="phone_number_attribution_query">手机号码归属地查询</string>
    <string name="common_number_query">常用号码查询</string>
    <string name="query">查询</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="phone_number_not_allow_null">手机号不能为空</string>
    <string name="phone_theft">手机防盗</string>
    <string name="bind_safe_phone_number">绑定安全手机号码</string>
    <string name="set_alarm_command">设置报警指令</string>
    <string name="please_input_safe_number">请输入安全手机号码</string>
    <string name="safe_number_not_allow_null">安全手机号码不能为空</string>
    <string name="please_input_alarm_command">请输入报警指令</string>
    <string name="alarm_command_not_allow_null">报警指令不能为空</string>
    <string name="set_remote_theft_command">设置远程开启防盗指令</string>
    <string name="please_input_remote_theft_command">请输入远程开启防盗指令</string>
    <string name="remote_theft_command_not_allow_null">远程开启防盗指令不能为空</string>
    <string name="attribution_show">归属地显示</string>
    <string name="attribution_show_on">归属地显示已经开启</string>
    <string name="attribution_show_off">归属地显示已经关闭</string>
    <string name="blacklist_intercept">黑名单拦截</string>
    <string name="blacklist_intercept_on">黑名单拦截已经开启</string>
    <string name="blacklist_intercept_off">黑名单拦截已经关闭</string>
    <string name="available_memory_tips">可用内存:</string>
    <string name="device_admin_description">青蛙卫士，更好的保护您的手机</string>
    <string name="device_admin_label">bingo设备管理器</string>
    <string name="phone_theft_off">手机防盗已关闭</string>
    <string name="phone_theft_on">手机防盗已关闭</string>
    <string name="set_remote_screen_lock_pwd">设置远程锁屏密码</string>
    <string name="please_input_remote_screen_lock_pwd">请输入远程锁屏密码</string>
    <string name="remote_screen_lock_pwd_length_invalid">远程锁屏密码锁必须为六位数字</string>

</resources>