<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:frogcare="http://schemas.android.com/apk/res/com.bingoogol.frogcare"
    style="@style/match_match"
    android:background="@color/bg_root_black"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/match_wrap"
        android:background="@color/bg_title_top"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_setting_back"
            android:layout_width="@dimen/btn_title_size"
            android:layout_height="@dimen/btn_title_size"
            android:background="@drawable/btn_back_selector" />

        <TextView
            style="@style/wrap_wrap"
            android:gravity="center_vertical"
            android:text="@string/setting_center"
            android:textSize="@dimen/textSize_large" />
    </LinearLayout>

    <ScrollView
        style="@style/match_match"
        android:layout_margin="@dimen/margin_edge"
        android:background="@color/bg_black"
        android:scrollbars="none" >

        <LinearLayout
            style="@style/match_wrap"
            android:orientation="vertical" >

            <com.bingoogol.frogcare.ui.view.SettingView
                android:id="@+id/sv_setting_autoupdate"
                style="@style/match_wrap"
                frogcare:content_off="@string/autoupdate_closed"
                frogcare:content_on="@string/autoupdate_opened"
                frogcare:title="@string/autoupdate" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>