<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_match"
    android:background="@color/bg_root_black"
    android:orientation="vertical" >

    <LinearLayout style="@style/title_top_ll" >

        <include layout="@layout/view_back" />

        <TextView
            style="@style/title_top_tv"
            android:text="@string/advance_tool" />
    </LinearLayout>

    <LinearLayout
        style="@style/match_match"
        android:layout_margin="@dimen/size_normal"
        android:background="@color/bg_black"
        android:orientation="vertical" >

        <Button
            android:id="@+id/btn_attribution"
            style="@style/advance_tool_item"
            android:layout_marginBottom="@dimen/size_divider"
            android:text="@string/phone_number_attribution_query" />

        <Button
            android:id="@+id/btn_common_number"
            style="@style/advance_tool_item"
            android:text="@string/common_number_query" />
    </LinearLayout>

</LinearLayout>