<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_match"
    android:background="@color/bg_root_black"
    android:orientation="vertical" >

    <LinearLayout
        style="@style/match_wrap"
        android:background="@color/bg_title_top"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <include layout="@layout/view_back" />

        <TextView
            style="@style/wrap_wrap"
            android:gravity="center_vertical"
            android:text="@string/system_optimize"
            android:textSize="@dimen/textSize_large" />
    </LinearLayout>

    <LinearLayout
        style="@style/match_match"
        android:layout_margin="@dimen/size_normal"
        android:background="@color/bg_black"
        android:orientation="vertical" >

        <LinearLayout
            style="@style/match_wrap"
            android:background="@color/bg_title_top"
            android:orientation="horizontal" >

            <TextView
                style="@style/optimize_tv"
                android:text="@string/app_name"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                style="@style/optimize_tv"
                android:text="@string/code_size"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                style="@style/optimize_tv"
                android:text="@string/data_size"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <ListView
            android:id="@+id/lv_cache"
            style="@style/match_match"
            android:cacheColorHint="@android:color/transparent"
            android:divider="@color/divider"
            android:dividerHeight="@dimen/size_divider" >
        </ListView>
    </LinearLayout>

</LinearLayout>