<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_match"
    android:background="@color/bg_root_black"
    android:orientation="vertical" >

    <TextView
        style="@style/match_wrap"
        android:background="@color/bg_title_top"
        android:gravity="center"
        android:padding="@dimen/size_large"
        android:text="@string/auth_applockpwd"
        android:textSize="@dimen/textSize_large" />

    <LinearLayout
        style="@style/match_match"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_applock_auth_icon"
            android:layout_width="@dimen/size_icon_large"
            android:layout_height="@dimen/size_icon_large"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:id="@+id/tv_applock_auth_name"
            style="@style/wrap_wrap"
            android:layout_margin="@dimen/size_large"
            android:gravity="center"
            android:singleLine="true"
            android:text="青蛙卫士"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize_middle" />

        <EditText
            android:id="@+id/et_applock_auth_pwd"
            android:layout_width="@dimen/applock_auth_pwd_width"
            android:layout_height="wrap_content"
            android:background="@drawable/textfield_pressed"
            android:hint="@string/please_input_applockpwd"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textColor="@android:color/white"
            android:textSize="@dimen/textSize_small" >
        </EditText>

        <Button
            android:id="@+id/btn_applock_auth_ok"
            android:layout_width="@dimen/applock_auth_ok_size"
            android:layout_height="@dimen/applock_auth_ok_size"
            android:layout_marginTop="@dimen/applock_auth_ok_marginTop"
            android:background="@drawable/btn_applock_auth_selector"
            android:padding="@dimen/size_large"
            android:text="@string/ok"
            android:textColor="@color/text_gray"
            android:textSize="@dimen/textSize_large_large" />
    </LinearLayout>

</LinearLayout>