<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_match"
    android:background="@drawable/common_bg"
    android:orientation="vertical" >

    <TextView
        style="@style/title_top"
        android:text="@string/applock" />

    <LinearLayout
        style="@style/match_wrap"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/tv_unlock_tab"
            style="@style/wrap_wrap"
            android:background="@drawable/tab_left_pressed"
            android:gravity="center"
            android:text="@string/unlock"
            android:textColor="@color/white_light"
            android:textSize="@dimen/textSize_middle" />

        <TextView
            android:id="@+id/tv_locked_tab"
            style="@style/wrap_wrap"
            android:background="@drawable/tab_right_default"
            android:gravity="center"
            android:text="@string/locked"
            android:textColor="@color/white_light"
            android:textSize="@dimen/textSize_middle" />
    </LinearLayout>

    <FrameLayout style="@style/match_match" >

        <LinearLayout
            android:id="@+id/ll_unlock"
            style="@style/match_match"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/tv_unlock_count"
                style="@style/match_wrap"
                android:background="@color/blue"
                android:text="未加锁应用x个"
                android:textSize="@dimen/textSize_small" />

            <ListView
                android:id="@+id/lv_unlock"
                style="@style/match_match" >
            </ListView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_locked"
            style="@style/match_match"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/tv_locked_count"
                style="@style/match_wrap"
                android:background="@color/blue"
                android:text="已加锁应用x个"
                android:textSize="@dimen/textSize_small" />

            <ListView
                android:id="@+id/lv_locked"
                style="@style/match_match" >
            </ListView>
        </LinearLayout>
    </FrameLayout>

</LinearLayout>